# final-project

./: LICENSE  README.md  beams.py  plots.py  pyproject.toml  sections_db.py  streamlit_app.py  utils.py
section_data/: aisc_w_sections_si.csv  aisc_w_sections_us.csv  eu_pf_sections.csv
